# acurast-indexer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  architecture.md  canary.scale  docker-compose.production.yaml  docker-compose.yaml  rust-toolchain.toml
.sqlx/: query-0c0fba84682616777df8224f71449766db91f44dc912ef1328056c9a22b70112.json  query-188fc6ec32cb3682024ce76651ccdf0fe3ea2a6a6bb535072c91545b07a0d944.json  query-1ceca8dc803e233c57ac548750132ab5b1fb64582ee4279569823526b5738c99.json  query-2e5b5e8be0d00e5da9451b4ddd2c8077140bf1e8e48cc146f0b0b7c78d57043f.json  query-30f5445de91839ce709b6766e4d69faf4cd370a1378c709a2c0175b88a8c4cb4.json  query-3fe0ebf7300b1dd9e45cd964638f524c7f77240e1c7da9376ced1c0802c9b116.json  query-7083a9332c123afd45989b28bdfc8fd6f7007415db7e87ab9037e6579efb5577.json  query-761b53f9cbad40b5aee70da38ed16e396a733e0dc55e8c74d74da97c49fd4442.json  query-896e1638bfc149bde78ffd6375d32270fe671885672bdaf39dd025e968a951a4.json  query-9f8b9653cda22dfd3b701be71860d193a389202227e531bb0c12d143f6ed405e.json  query-b6924662fe54c51c6deb620e4f90488e8e8dcf5cb4205e4a4e45e4f1eeddb38f.json  query-bf9922daa727c5f7a9c355e9c5dc6064c74c87664ac32865ca694d0916e50826.json  query-e8471093271d58c90f2ff735d36d5d5a6c8bd897ea1483f20da1822f22d6276a.json
configuration/: base.yaml  production.yaml
frontend/: package-lock.json  package.json  vite.config.ts
migrations/: 20250305215000_init.down.sql  20250305215000_init.up.sql  20260218093720_extrinsics_block_number_index.down.sql  20260218093720_extrinsics_block_number_index.up.sql  20260219173404_commitments.down.sql  20260219173404_commitments.up.sql  20260224135151_indexes.down.sql  20260224135151_indexes.up.sql  20260227120000_index_progress.down.sql  20260227120000_index_progress.up.sql  20260306000000_add_spec_version_metadata.down.sql  20260306000000_add_spec_version_metadata.up.sql  20260313000000_rename_target_weight_column.down.sql  20260313000000_rename_target_weight_column.up.sql  20260313000001_jobs_address_seq_id_index.down.sql  20260313000001_jobs_address_seq_id_index.up.sql  (+2 more)
(+64 files in other folders)
